--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     <ImageView
         android:layout_width="350dp"
         android:layout_height="350dp"
-        android:background="@drawable/LogoStartAgro"/>
+        android:background="@drawable/fondo_login"/>
 
 
 
