--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,44 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:layout_gravity="center"
-    >
+    android:orientation="vertical"
+    android:background="@drawable/fondo_login">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+
+        >
+
+
+        <ImageView
+            android:id="@+id/imagePerfil"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/baseline_account_circle_black_48d2" />
+
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/baseline_camera_enhance_black_24dp"
+            android:layout_marginTop="17dp"
+            android:layout_marginLeft="10dp"
+            android:id="@+id/btnCargarFoto"/>
+    </LinearLayout>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"></LinearLayout>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/baseline_account_circle_black_48d2"
-            android:id="@+id/imagePerfil"/>
 
         <RadioGroup
             android:layout_width="match_parent"
@@ -35,34 +50,143 @@
                 android:id="@+id/radioButtonEmprendedor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:checked="false"
-                android:text="Emprendedor Agrario"
                 android:layout_marginTop="10dp"
-                />
+                android:checked="false"
+                android:text="Emprendedor Agrario" />
 
             <RadioButton
                 android:id="@+id/radioButtonInversor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:checked="false"
-                android:text="Inversor                       "
                 android:layout_marginTop="10dp"
-                />
-
+                android:checked="false"
+                android:text="Inversor                       " />
 
 
         </RadioGroup>
 
 
-
     </LinearLayout>
 
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:columnCount="2"
+        android:orientation="horizontal"
+        android:rowCount="5">
+
+        <TextView
+            android:id="@+id/nombreRegistro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="20dp"
+            android:text="Nombre"
+            android:textStyle="bold"/>
+
+        <EditText
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:id="@+id/txtNombreRegistro"
+            android:background="@drawable/forma_edit_text"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Correo"
+            android:id="@+id/correoRegistro"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="40dp"
+            android:textStyle="bold"/>
+
+        <EditText
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:id="@+id/txtCorreoRegistro"
+            android:background="@drawable/forma_edit_text"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Telefono"
+            android:id="@+id/telefonoRegistro"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="40dp"
+            android:textStyle="bold"/>
+
+        <EditText
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:id="@+id/txtTelefonoRegistro"
+            android:background="@drawable/forma_edit_text"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Contraseña"
+            android:id="@+id/contraseña1Registro"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="40dp"
+            android:textStyle="bold"/>
+
+        <EditText
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:id="@+id/txtcontraseña1Registro"
+            android:inputType="textPassword"
+            android:background="@drawable/forma_edit_text"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Contrañseña"
+            android:id="@+id/contraseña2Registro"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="40dp"
+            android:textStyle="bold"
+            />
+
+        <EditText
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:id="@+id/txtcontraseña2Registro"
+            android:inputType="textPassword"
+            android:background="@drawable/forma_edit_text"/>
+
+    </GridLayout>
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
 
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Aceptar los términos y condiciones"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="40dp"
+            android:gravity="center"
+            android:id="@+id/checkboxTerminos"/>
+    </LinearLayout>
 
-
-
+    <Button
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Registrarse"
+        android:id="@+id/btnRegistrarse"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"/>
 
 
 
