--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,8 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/forma_edit_text"
         android:paddingLeft="10dp"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp"
+        android:inputType="textPassword"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
