--- a/app/src/main/res/layout/activity_publicar.xml
+++ b/app/src/main/res/layout/activity_publicar.xml
@@ -22,6 +22,7 @@
             android:layout_width="120dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
+            android:background="@drawable/forma_edit_text"
             android:id="@+id/et_titulo"/>
 
     </LinearLayout>
